# chuchu

./: .gitignore  README.md  chuchu.cabal
Language/: Gherkin.hs
Test/: Chuchu.hs
Test/Chuchu/: Parsec.hs  Parser.hs  Types.hs
src/Test/: Chuchu.hs
src/Test/Chuchu/: Email.hs  OutputPrinter.hs  Parsec.hs  Parser.hs  Types.hs
tests/: background_and_multiple_scenarios.hs  background_fail.hs  calculator.hs  environment.hs  gherkin.hs  multiple_features.hs  multiple_scenarios.hs  prefix.hs  should_fail.hs
tests/data/: background_and_multiple_scenarios.feature  background_fail.feature  calculator.feature  environment.feature  givenWhenGivenWhen.feature  multiple_scenarios.feature  prefix.feature
