name: chuchu
version: 0.0.1
build-type: Simple
cabal-version: >= 1.8
tested-with: GHC ==7.4.2

library
  exposed-modules:
    Test.Chuchu,
    Language.Gherkin
  build-depends:
    -- 4.5.1.0
    base,
    -- 0.11.2.2
    text,
    -- 1.2.0
    hslogger,
    -- 3.1.3
    parsec
  ghc-options: -Wall -O
  ghc-prof-options: -rtsopts -fprof-auto -fprof-cafs

Test-Suite environment
  type: exitcode-stdio-1.0
  main-is: environment.hs
  hs-source-dirs: tests
  build-depends:
   base,
   -- 2.5.1.1
   unix,
   chuchu,
   -- 1.2.5.1
   HUnit
  ghc-options: -Wall -O
  ghc-prof-options: -rtsopts -fprof-auto -fprof-cafs

Test-Suite gherkin
  type: exitcode-stdio-1.0
  main-is: gherkin.hs
  hs-source-dirs: tests
  build-depends:
    base,
    text,
    -- 1.1.1.0
    MissingH,
    chuchu,
    HUnit
  ghc-options: -Wall -O
  ghc-prof-options: -rtsopts -fprof-auto -fprof-cafs
