name: chuchu
version: 0.0.1
cabal-version: >= 1.8
build-type: Simple
license-file: LICENSE
copyright: 2012 Marco Túlio Pimenta Gontijo <marcotmarcot@gmail.com>
author: Marco Túlio Pimenta Gontijo <marcotmarcot@gmail.com>
maintainer: Marco Túlio Pimenta Gontijo <marcotmarcot@gmail.com>
stability: experimental
homepage: http://github.com/marcotmarcot/chuchu
bug-reports: http://github.com/marcotmarcot/chuchu/issues
synopsis: Behaviour Driven Development for Haskell
description:
  Chuchu is a system similar to Ruby's Cucumber for Behaviour Driven
  Development.  It works with a language similar to Cucumber's Gherkin, which is
  parsed using package abacate.
category: Test
tested-with: GHC ==7.4.2
extra-source-files:
  tests/data/environment.feature

library
  exposed-modules:
    Test.Chuchu
  build-depends:
    -- 4.5.1.0
    base,
    -- 0.11.2.2
    text,
    -- 1.2.0
    hslogger,
    -- 3.1.3
    parsec,
    -- 0.0.1
    abacate
  ghc-options: -Wall -O

Test-Suite environment
  type: exitcode-stdio-1.0
  main-is: environment.hs
  hs-source-dirs: tests
  build-depends:
   base,
   -- 2.5.1.1
   unix,
   abacate,
   chuchu,
   -- 1.2.5.1
   HUnit
  ghc-options: -Wall -O
